# bloodowned

./: .gitignore  README.md  pyproject.toml
bloodowned/: main.py
