[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodowned"
version = "0.1.0"
description = "A tool to mark a user as owned in a BloodHound Neo4j database."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "neo4j",
    "argparse"
]

[project.scripts]
bloodowned = "bloodowned.main:main"
